<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_userPreferences"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/userPreferences" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/logOut" />

</menu>
